--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -10,6 +10,6 @@ io.openshift.tags="apache, httpd"
 RUN sed -i "s/Listen 80/Listen/g" /etc/httpd/conf/httpd.conf
 
 RUN chgrp -R 0 /var/log/httpd /var/run/httpd && \
-chmod -R g=u /var/logs/httpd /var/run/httpppppppd
+chmod -R g=u /var/logs/httpd /var/run/httpd
 
 USER 1001
