--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -7,9 +7,8 @@ io.k8s.display-name="Apache HTTP Server" \
 io.openshift.expose-services="8080:tcp" \
 io.openshift.tags="apache, httpd"
 
-RUN sed -i "s/Listen 80/Listen/g" /etc/httpd/conf/httpd.conf
-
-RUN chgrp -R 0 /var/log/httpd /var/run/httpd && \
+RUN sed -i "s/Listen 80/Listen/g" /etc/httpd/conf/httpd.conf && \
+chgrp -R 0 /var/log/httpd /var/run/httpd && \
 chmod -R g=u /var/logs/httpd /var/run/httpd
 
 USER 1001
